fixed Unix path + wrap for caret

--- a/src/Components/Card/Page/Portfolio/Portfolio.module.scss
+++ b/src/Components/Card/Page/Portfolio/Portfolio.module.scss
@@ -42,6 +42,7 @@
 
 .meNameStyle {
   font-weight: 600;
+  white-space: nowrap;
 }
 
 .meNameCaret {
