--- a/src/root.scss
+++ b/src/root.scss
@@ -32,11 +32,11 @@ body {
 
 /* Syntax Highlighter Styling */
 
-$dec: url("./static/images/SyntaxParser/play-button-decrement.png");
-$dec-active: url("./static/images/SyntaxParser/play-button-decrement-active.png");
+$dec: url("./static/Images/SyntaxParser/play-button-decrement.png");
+$dec-active: url("./static/Images/SyntaxParser/play-button-decrement-active.png");
 
-$inc: url("./static/images/SyntaxParser/play-button-increment.png");
-$inc-active: url("./static/images/SyntaxParser/play-button-increment-active.png");
+$inc: url("./static/Images/SyntaxParser/play-button-increment.png");
+$inc-active: url("./static/Images/SyntaxParser/play-button-increment-active.png");
 
 code {
   animation: fadeIn 1s;
